@@ -27,19 +27,26 @@
 #ifndef FUSE_SCREENSHOT_H
 #define FUSE_SCREENSHOT_H
 
-#ifdef USE_LIBPNG
-
 #ifndef SCALER_H
 #include "ui/scaler/scaler.h"
 #endif				/* #ifndef SCALER_H */
 
+#ifdef USE_LIBPNG
+
 int screenshot_save( void );
 int screenshot_write( const char *filename, scaler_type scaler );
+int screenshot_write_fast( const char *filename, scaler_type scaler );
 int screenshot_available_scalers( scaler_type scaler );
 
 #endif				/* #ifdef USE_LIBPNG */
 
 int screenshot_scr_write( const char *filename );
 int screenshot_scr_read( const char *filename );
+
+extern char screenshot_movie_name[];
+extern char screenshot_movie_file[];
+extern long int screenshot_movie_frame;
+extern int screenshot_movie_record;
+extern scaler_type screenshot_movie_scaler;
 
 #endif				/* #ifndef FUSE_SCREENSHOT_H */
