@@ -185,6 +185,11 @@ struct menu_item_entries {
 };
 
 static const struct menu_item_entries menu_item_lookup[] = {
+
+  { UI_MENU_ITEM_FILE_MOVIES_RECORDING, "/File/Movies/Stop Movie Recording",
+    "/File/Movies/Record Movie as SCR...", 1,
+    "/File/Movies/Record Movie as PNG...", 1,
+  },
   
   { UI_MENU_ITEM_MEDIA_CARTRIDGE, "/Media/Cartridge" },
 
